compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__add_missing_patterns_inline.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1533
expression: "\npub fn main() {\n  let a = True\n  let value = case a {}\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let a = True
  let value = case a {}
              ▔▔▔▔▔↑   
}


----- AFTER ACTION

pub fn main() {
  let a = True
  let value = case a {
    False -> todo
    True -> todo
  }
}
