compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__add_missing_patterns_tuple.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1464
expression: "\npub fn main() {\n  let two_at_once = #(True, Ok(1))\n  case two_at_once {\n    #(False, Error(_)) -> Nil\n  }\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let two_at_once = #(True, Ok(1))
  case two_at_once {
  ▔▔▔▔▔↑            
    #(False, Error(_)) -> Nil
  }
}


----- AFTER ACTION

pub fn main() {
  let two_at_once = #(True, Ok(1))
  case two_at_once {
    #(False, Error(_)) -> Nil
    #(True, Error(_)) -> todo
    #(_, Ok(_)) -> todo
  }
}
