compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__add_multiple_annotations.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1851
expression: "\npub const my_constant = 20\n\npub fn add_my_constant(value) {\n  let result = value + my_constant\n  result\n}\n"
---
----- BEFORE ACTION

pub const my_constant = 20
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

pub fn add_my_constant(value) {
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  let result = value + my_constant
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  result
▔▔▔▔▔▔▔▔
}
↑


----- AFTER ACTION

pub const my_constant: Int = 20

pub fn add_my_constant(value: Int) -> Int {
  let result: Int = value + my_constant
  result
}
