compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__adding_annotations_prints_contextual_types.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1897
expression: "\npub type IntAlias = Int\n\npub fn main() {\n  let value = 20\n}\n"
---
----- BEFORE ACTION

pub type IntAlias = Int

pub fn main() {
  let value = 20
  ▔▔▔▔↑         
}


----- AFTER ACTION

pub type IntAlias = Int

pub fn main() {
  let value: IntAlias = 20
}
