compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__adding_annotations_prints_contextual_types2.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub type Result\n\npub fn main() {\n  let value = Ok(12)\n}\n"
---
----- BEFORE ACTION

pub type Result

pub fn main() {
  let value = Ok(12)
  ▔▔▔▔▔▔▔▔▔▔↑       
}


----- AFTER ACTION

pub type Result

pub fn main() {
  let value: rakun.Result(Int, a) = Ok(12)
}
