compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__adding_annotations_prints_contextual_types3.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1935
expression: "\nimport wibble\n\npub fn main() {\n  let value = wibble.Wibble\n}\n"
---
----- BEFORE ACTION

import wibble

pub fn main() {
  let value = wibble.Wibble
  ▔▔▔▔▔▔▔▔▔▔↑              
}


----- AFTER ACTION

import wibble

pub fn main() {
  let value: wibble.Wibble = wibble.Wibble
}
